--- a/software/myshoppingcart/client/bower.json
+++ b/software/myshoppingcart/client/bower.json
@@ -16,7 +16,8 @@
     "bootstrap-css-only": "^3.3.7",
     "angular-ui-select": "^0.19.6",
     "angular-sanitize": "^1.6.1",
-    "angular-ui-router": "ui-router#^0.4.0"
+    "angular-ui-router": "ui-router#^0.4.0",
+    "checklist-model": "^0.10.0"
   },
   "devDependencies": {
     "angular-translate": "^2.13.1"
